HelloUltraviolet/Fixtures/RejectedSource/Expressions/MethodNotFound/Expected.uv
//! Expected diagnostic metadata for the MethodNotFound rejected-source specimen.

expectedDiagnostic("E-SEM-2536", "rule.15.LookupMethod-NotFound")
